--- a/src/css/RemoveComment.css
+++ b/src/css/RemoveComment.css
@@ -11,13 +11,13 @@
 }
 
 .modalContent_RemoveComment {
-  border-radius: 40px;
+  border-radius: 10px;
   position: relative;
-  background-color: rgb(56, 35, 41);
+  background-color: white;
   margin-left: auto;
   margin-right: auto;
   padding: 20px;
-  border: 2px solid rgb(160, 160, 160);
+  /* border: 2px solid rgb(160, 160, 160); */
   width: 30%;
   height: 40%;
   top: 25%;
@@ -29,7 +29,7 @@
 .removeComment_text {
   position: relative;
   top: 7%;
-  color: white;
+  color: black;
   font-size: 50px;
   text-align: center;
   font-weight: bold;
@@ -46,7 +46,7 @@
   color: black;
   font-size: 25px;
   font-weight: bold;
-  color: rgb(5, 5, 78);
+  color: black;
 }
 
 .removeComment_ReturnBtn {
@@ -60,5 +60,5 @@
   color: black;
   font-size: 25px;
   font-weight: bold;
-  color: rgb(5, 5, 78);
+  color: black;
 }
