--- a/src/css/Landing.scss
+++ b/src/css/Landing.scss
@@ -494,43 +494,44 @@
         animation-fill-mode: both;
       }
 
-      @keyframes brackets_top1 {
-        from {
-          // position: absolute;
-          // transform: rotate(90deg);
-          top: 50%;
-          right: 50%;
-          transform: translate(+50%, -50%);
-        }
-        to {
-          // position: absolute;
-          transform: rotate(90deg);
-          top: 30%;
-          right: 50%;
-          transform: translateX(+50%);
-        }
-      }
-      @keyframes brackets_top2 {
-        from {
-          position: absolute;
-          transform: rotate(90deg);
-          top: 50%;
-          right: 50%;
-          transform: translate(+50%, -50%);
-        }
-        to {
-          position: absolute;
-          transform: rotate(90deg);
-          top: 80%;
-          right: 50%;
-          transform: translateX(+50%);
-        }
-      }
+      // @keyframes brackets_top1 {
+      //   from {
+      //     // position: absolute;
+      //     // transform: rotate(90deg);
+      //     top: 50%;
+      //     right: 50%;
+      //     transform: translate(+50%, -50%);
+      //   }
+      //   to {
+      //     // position: absolute;
+      //     transform: rotate(90deg);
+      //     top: 30%;
+      //     right: 50%;
+      //     transform: translateX(+50%);
+      //   }
+      // }
+      // @keyframes brackets_top2 {
+      //   from {
+      //     position: absolute;
+      //     transform: rotate(90deg);
+      //     top: 50%;
+      //     right: 50%;
+      //     transform: translate(+50%, -50%);
+      //   }
+      //   to {
+      //     position: absolute;
+      //     transform: rotate(90deg);
+      //     top: 80%;
+      //     right: 50%;
+      //     transform: translateX(+50%);
+      //   }
+      // }
 
 
       @keyframes smoky {
         from {
           // color: whitesmoke;
+          
           text-shadow: 0 0 40px whitesmoke;
           opacity: 0;
         }
@@ -545,40 +546,7 @@
           opacity: 1;
         }
       }
-      @keyframes smoky2 {
-        from {
-          color: whitesmoke;
-          text-shadow: 0 0 40px whitesmoke;
-          opacity: 0;
-        }
-        to {
-          // transform: 
-          //   translate3d(15rem, -8rem, 0)
-          //   rotate(-40deg)
-          //   skewX(70deg)
-          //   scale(1.5);
-          color: whitesmoke;
-          text-shadow: 0 0 10px whitesmoke;
-          opacity: 1;
-        }
-      }
-      @keyframes smoky3 {
-        from {
-          color: whitesmoke;
-          text-shadow: 0 0 40px whitesmoke;
-          opacity: 0;
-        }
-        to {
-          // transform: 
-          //   translate3d(15rem, -8rem, 0)
-          //   rotate(-40deg)
-          //   skewX(70deg)
-          //   scale(1.5);
-          color: whitesmoke;
-          text-shadow: 0 0 10px whitesmoke;
-          opacity: 1;
-        }
-      }
+
               // @for $item from 1 through 21 {
               //   span:nth-of-type(#{$item}){ 
               //     animation-delay: #{(3 + ($item/10))}s; 
@@ -592,19 +560,102 @@
   .scrollDown {
     position: absolute;
     font-size: 2.5rem;
-    color: white;
+    color: whitesmoke;
     top: 85%;
-    left: 48.95%;
+    right: 510px;
+    // left: 48.95%;
+
+
+    animation-name: scoll;
+    animation-delay: 2.5s;  // 비디오 재생 끝나고 스크롤 아이콘 등장에서 부자연스러움 방지
+    animation-duration: 2s;
+    animation-timing-function: linear; // 애니메이션 속도조절
+    animation-iteration-count: infinite;
+    // animation-fill-mode: both; ---> 활성화 시키면 애니매이션 반복 작동 안함.
+  
 
     &:hover {
       cursor: pointer;
-      width: 100%;
-      height: 100%;
-      left: unset;
-      text-align: center;
+      // width: 100%;
+      // height: 100%;
+      // right: unset;
+      // left: unset;
+      
       // background: rgba(0, 0, 5, 0.24);
       
-      background: linear-gradient(to top, black,90%, rgba(0, 0, 0, 0));
+      // background: linear-gradient(to top, black,90%, rgba(0, 0, 0, 0));
+    }
+
+  }
+  @keyframes scoll {
+    from {
+      color: whitesmoke;
+      
+      // transition: ease-in;
+      text-shadow: 0 0 40px whitesmoke;
+      opacity: 0;
+
+    }
+    // 20% {
+    //   color: whitesmoke;
+      
+    //   // transition: ease-in;
+    //   text-shadow: 0 0 40px whitesmoke;
+    //   opacity: 0.2;
+    // }
+    25%{
+      color: whitesmoke;
+      
+      // transition: ease-in;
+      text-shadow: 0 0 40px whitesmoke;
+      opacity: 0.5;
+    }
+    // 40% {
+    //   color: whitesmoke;
+      
+    //   // transition: ease-in;
+    //   text-shadow: 0 0 40px whitesmoke;
+    //   opacity: 0.4;
+    // }
+
+    50%{
+      color: whitesmoke;
+      opacity: 1;
+    }
+    // 60% {
+    //   color: whitesmoke;
+      
+    //   // transition: ease-in;
+    //   text-shadow: 0 0 40px whitesmoke;
+    //   opacity: 0.6;
+    // }
+    75% {
+      color: whitesmoke;
+      
+      // transition: ease-in;
+      text-shadow: 0 0 40px whitesmoke;
+      opacity: 0.5;
+    }
+    // 80% {
+    //   color: whitesmoke;
+      
+    //   // transition: ease-in;
+    //   text-shadow: 0 0 40px whitesmoke;
+    //   opacity: 0.8;
+    // }
+    // 90% {
+    //   color: whitesmoke;
+      
+    //   // transition: ease-in;
+    //   text-shadow: 0 0 40px whitesmoke;
+    //   opacity: 0.9;
+    // }
+    to {
+      color: whitesmoke;
+      
+      // transition: ease-in;
+      text-shadow: 0 0 10px whitesmoke;
+      opacity: 0.2;
     }
   }
 
