--- a/src/css/Mypage.scss
+++ b/src/css/Mypage.scss
@@ -64,7 +64,8 @@
     background: white;
     color: black;
     position: relative;
-    width: 60%;
+    width: 750px;
+    height: 560px;
     text-align: center;
     border-radius: 10px;
     padding: 2%;
@@ -154,6 +155,8 @@
           padding: 0.3rem 0.9rem;
           margin: unset;
         }
+
+
         .email_div_inMypage {
           display: flex;
           
@@ -188,6 +191,7 @@
         .mobile_div_inMypage {
           display: flex;
           justify-content: space-between;
+          
             span {
               margin-right: 60px;
             }
