--- a/src/css/Mypage.scss
+++ b/src/css/Mypage.scss
@@ -65,11 +65,12 @@
     color: black;
     position: relative;
     width: 750px;
-    height: 560px;
+    // height: 560px;
     text-align: center;
     border-radius: 10px;
     padding: 2%;
 
+    font-family: 'Noto Serif KR', serif;
 
 
 
@@ -145,9 +146,9 @@
         input {
           // display: inline-block;
           // float: right;
-          display: flex;
-          justify-content: space-between;
-          width: 70%;
+          // display: flex;
+          // justify-content: space-between;
+          width: 130%;
           font-size: 0.7rem;
           border-radius: 5px;
           border-width: 1.6px;
@@ -156,12 +157,16 @@
           margin: unset;
         }
 
+        .bold {
+          font-weight: bold;
+          // color:;
+        }
 
         .email_div_inMypage {
           display: flex;
           
           // justify-content: space-between;
-          padding-bottom: 30px;
+          padding-bottom: 50px;
           .float {
             margin-right: 60px;
           }
@@ -171,21 +176,31 @@
           // width: ;
           display: flex;
           justify-content: space-between;
-          padding-bottom: 30px;
+          padding-bottom: 50px;
             // .float_pw {
               // display: flex;
               // justify-content: space-around;
               span {
+                // display: flex;
+                // justify-content: space-between;
                 margin-right: 48px;
               }
             // }
+            .pw_input_container {
+              display: flex;
+              width: 80%;
+            }
         }
         .nickname_div_inMypage {
           display: flex;
           justify-content: space-between;
-          padding-bottom: 30px;
+          padding-bottom: 50px;
             span {
               margin-right: 75px;
+            }
+            .nickname_input_container {
+              display: flex;
+              width: 80%;
             }
         }
         .mobile_div_inMypage {
@@ -195,9 +210,21 @@
             span {
               margin-right: 60px;
             }
+            .mobile_input_container {
+              display: flex;
+              width: 80%;
+            }
         }
       }
 
+      .Button_container_InSignUp {
+        display: flex;
+        padding: 5%;
+        padding-bottom: unset;
+        justify-content: flex-end;
+      }
+
+// 프사 바로 아래 간단 유저 정보
     h1 {
       // padding-left: 5%;
       // display: flex;
@@ -210,12 +237,12 @@
       color: rgba(34, 34, 34, 0.781);
     }
 
-    .social_info {
-      padding-right: 5%;
-      padding-left: 5%;
-      display: flex;
-      justify-content: space-between;
-    }
+    // .social_info {
+    //   padding-right: 5%;
+    //   padding-left: 5%;
+    //   display: flex;
+    //   justify-content: space-between;
+    // }
   
 
 
