--- a/src/css/Google.scss
+++ b/src/css/Google.scss
@@ -19,10 +19,12 @@
   }
 
   .modal_Google_content {
+
+    font-family: 'Noto Serif KR', serif;
     background: white;
     color: black;
     position: relative;
-    width: 40%;
+    width: 750px;
     text-align: center;
     border-radius: 10px;
 
