--- a/src/css/RemoveComment.css
+++ b/src/css/RemoveComment.css
@@ -13,7 +13,7 @@
 .modalContent_RemoveComment {
   border-radius: 10px;
   position: relative;
-  background-color: white;
+  background-color: rgb(245, 245, 245);
   margin-left: auto;
   margin-right: auto;
   padding: 20px;
@@ -46,6 +46,7 @@
   color: black;
   font-size: 25px;
   font-weight: bold;
+  text-align: center;
   color: black;
 }
 
