--- a/src/css/Google.scss
+++ b/src/css/Google.scss
@@ -12,7 +12,7 @@
   align-items: center;
 
   .modal_Google_overlay {
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.4);
     position: fixed;
     width: 100vw;
     height: 100vh;
@@ -24,7 +24,8 @@
     background: white;
     color: black;
     position: relative;
-    width: 750px;
+    width: 550px;
+    padding:38px;
     text-align: center;
     border-radius: 10px;
 
@@ -57,14 +58,28 @@
     }
 
     h2 {
-      padding-left: 5%;
+      padding-top: 6%;
+      padding-left: 10px;
       display: flex;
     }
-    .social_info {
-      padding-right: 5%;
-      padding-left: 5%;
-      display: flex;
-      justify-content: space-between;
+
+    .button_container_InSignUp{
+      // padding: 2%;
+      .social_info {
+        padding-right: 5%;
+        padding-left: 5%;
+        display: flex;
+        justify-content: space-between;
+
+      }
+      .button_container_InSignUp_div {
+        display: flex;
+        padding-top: 10%;
+        padding-right: 20px;
+        
+        padding-bottom: unset;
+        justify-content: flex-end;
+      }
     }
   }
 
@@ -80,6 +95,7 @@
     // margin-left: 7%;
     // margin-bottom: 7%;
   // }
+
 
 }
 
