--- a/src/css/Comments.scss
+++ b/src/css/Comments.scss
@@ -17,7 +17,7 @@
 .modalContent {
   display: block;
   position: fixed;
-  background-color: rgb(245, 245, 245);
+  background-color: rgb(253, 253, 253);
   z-index: 1;
   width: 60%;
   height: 90%;
@@ -45,12 +45,15 @@
 
 .photoName {
   position: absolute;
-  top: 7%;
+  display: inline-block;
+  bottom: 27%;
   left: 5%;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
   width: 90%;
   color: black;
   font-size: 32px;
-  // font-family: "Josefin Slab", serif;
   font-family: "Nanum Gothic", sans-serif;
   font-weight: 800;
 }
@@ -77,16 +80,16 @@
   max-height: 55%;
   margin-left: auto;
   margin-right: auto;
-  bottom: -17%;
+  top: 10%;
 }
 
 .hashTag {
   position: absolute;
   left: 5%;
-  bottom: 22%;
+  bottom: 16%;
   width: 100%;
   color: black;
-  font-size: 18px;
+  font-size: 20px;
   font-family: "Nanum Gothic", sans-serif;
   font-weight: 800;
 }
@@ -112,14 +115,17 @@
 }
 
 .btns {
-  position: absolute;
-  width: 100%;
-  bottom: 6%;
-  right: 7%;
+  // position: absolute;
+  // width: 100%;
+  // bottom: 6%;
+  // right: 7%;
 }
 
 .modifyBtn {
-  display: inline-block;
+  position: absolute;
+  // display: inline-block;
+  bottom: 6%;
+  right: 12%;
   width: 70px;
   height: 30px;
   font-size: 15px;
@@ -130,13 +136,15 @@
 }
 
 .deleteBtn {
+  position: absolute;
+  bottom: 6%;
+  right: 5%;
   width: 70px;
   height: 30px;
   font-size: 15px;
   font-family: "Nanum Gothic", sans-serif;
   font-weight: 800;
   color: black;
-  background-color: rgb(97, 69, 163);
   border-radius: 10px;
 }
 
@@ -168,19 +176,19 @@
 .favorite_div {
   position: absolute;
   display: block;
-  bottom: 39%;
-  left: 0%;
+  left: 5%;
+  bottom: 19%;
 }
 
 .favoriteBorder {
   color: rgb(0, 0, 0);
-  font-size: 50px;
+  font-size: 35px;
   font-weight: bold;
 }
 
 .favorite {
   color: rgb(252, 99, 11);
-  font-size: 50px;
+  font-size: 35px;
   font-weight: bold;
 }
 
@@ -193,8 +201,13 @@
 }
 
 .commentWriter {
-  width: 83%;
+  position: relative;
+  left: 0;
+  width: 81%;
   height: 25px;
+  padding: 12px;
+  border: 1px solid rgb(173, 173, 173);
+  border-radius: 3px;
   font-family: "Nanum Gothic", sans-serif;
 }
 
@@ -214,23 +227,28 @@
   display: flex;
   flex-direction: column;
   height: 85%;
-  background-color: rgb(216, 216, 216);
+  // background-color: rgb(216, 216, 216);
+  background-color: rgba(245, 245, 245, 0.3);
   overflow: scroll;
 }
 
 .emptyComments {
   font-size: 15px;
-  font-weight: bold;
   text-align: center;
-  color: black;
-  font-family: "Nanum Gothic", sans-serif;
-  font-weight: 800;
+  color: rgb(4, 4, 4);
+  // font-family: "Nanum Gothic", sans-serif;
+  // font-family: "Noto Serif KR", serif;
+  font-face {
+    font-family: yleeFont;
+    src: url("../font/ylee_Mortal_Heart.ttf");
+  }
+  font-weight: 700;
 }
 
 .comment {
   position: relative;
   width: 99%;
-  border-bottom: 2px solid rgb(187, 187, 187);
+  // border-bottom: 2px solid rgb(187, 187, 187);
   overflow: visible;
 }
 
