:bug: 화면 비율 조정
화면 비율 조정

--- a/src/css/Comments.scss
+++ b/src/css/Comments.scss
@@ -30,14 +30,14 @@
 
 .modalContent_Left {
   position: absolute;
-  width: 65%;
+  width: 55%;
   height: 100%;
   /* background-color: brown; */
 }
 
 .modalContent_Right {
   position: absolute;
-  width: 35%;
+  width: 45%;
   height: 100%;
   right: 0;
   /* background-color: rgb(224, 224, 224); */
@@ -196,7 +196,7 @@
   position: absolute;
   bottom: 8%;
   right: 6%;
-  width: 97%;
+  width: 395px;
   height: 30%;
 }
 
