--- a/src/css/SignIn.scss
+++ b/src/css/SignIn.scss
@@ -18,7 +18,7 @@ $desktop: 1400px;
 
   
   .modal_signIn_overlay {
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(0, 0, 0, 0.4);
     position: fixed;
     width: 100vw;
     height: 100vh;
@@ -31,14 +31,18 @@ $desktop: 1400px;
       font-family: 'Josefin Slab', serif;
       font-size: 2.5rem;
       color: rgb(170, 117, 46);
+      margin-top: 50px;
+      margin-bottom: 50px;
     }
 
-    background-color: white;
-    width: 48%;
+    // background-color: white;
+    background-color: rgb(253, 253, 253);
+    width: 780px;
     position: relative;
     text-align: center;
     border-radius: 10px;
     color: black;
+    padding-right: 3%;
   }
 
   // #signIn_logo {
@@ -60,10 +64,10 @@ $desktop: 1400px;
     .container_signIn {
       float: left;
       width: 50%;
-      margin-left: 3%;
+      // margin-left: 3%;
       // margin-right: 4%;
       margin-bottom: 3%;
-    
+      
 
       .user_title {
         // font-family: 'Amatic SC', cursive;
@@ -75,6 +79,7 @@ $desktop: 1400px;
         align-content: center;
         padding-left: 0.3rem;
         padding-bottom: 12px;
+        margin-bottom: 5px;
       }
       input[type="email"],
       input[type="password"]{
@@ -85,7 +90,8 @@ $desktop: 1400px;
         border-width: 1.6px;
         border-color: rgb(143, 143, 143);
         padding: 0.48rem 0.9rem;
-        // margin: 0.4rem;
+        // margin-top: 0.4rem;
+
         
       }
       .input_pw_singin {
@@ -103,7 +109,7 @@ $desktop: 1400px;
       .Email_PW_container {
         // background: skyblue; // 사이즈 테스트 중
         
-        margin-right: 7%;
+        // margin-right: 7%;
         margin-left: 7%;
         margin-bottom: 3px;
 
@@ -126,7 +132,7 @@ $desktop: 1400px;
       }
       
       .find_container {
-        margin-right: 7%;
+        // margin-right: 7%;
         margin-left: 7%;
         padding-left: 0.3rem;
         
@@ -145,10 +151,10 @@ $desktop: 1400px;
       }
 
       .button_container_signin {
-        margin-top: 5%;
+        margin-top: 15%;
         margin-right: 7%;
         margin-left: 7%;
-        padding-left: 0.3rem;
+        // padding-left: 0.3rem;
       
         .signIn_icon {
           padding-left: 0.1rem;
@@ -163,7 +169,7 @@ $desktop: 1400px;
       width: 1px;
       height: 10rem;
       margin-top: 3%;
-      margin-left: 1.5rem;
+      // margin-left: 1.5rem;
       
       direction: column;
       
@@ -171,12 +177,12 @@ $desktop: 1400px;
 
     .container2_siginIn {
       float: left;
-      width: 40%;
+      width: 20%;
       // margin-right: 3%;
       // margin-bottom: 3%;
       .socialLogin{
         // margin:0 10%;
-        padding-left: 20%;
+        padding-left: 10%;
         // position: relative;
         // display: flex;
         // justify-content: center;
@@ -196,6 +202,7 @@ $desktop: 1400px;
         .socialLogin_btn{
           
           margin-top: 1rem;
+          margin-bottom: 20px;
           display: flex;
           justify-content: flex-start;
           // max-width: 50%;
