--- a/src/css/SignUp.scss
+++ b/src/css/SignUp.scss
@@ -10,7 +10,7 @@
   align-items: center;
 
   .modal_SignUp_overlay {
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.4);
     position: fixed;
     width: 100vw;
     height: 100vh;
@@ -21,14 +21,17 @@
       font-family: 'Noto Serif KR', serif;
       // font-family: 'Gamja Flower', cursive;
       // font-family: 'Hi Melody', cursive;
+      margin-bottom: 60px;
 
     }
-    background: white;
+    // background: white;
+    background:rgb(253, 253, 253);
     color: black;
     position: relative;
-    width: 48%;
+    width: 850px;
     text-align: center;
     border-radius: 10px;
+    padding: 1%;
 
     .text_style_SignUp {
       color: red;
@@ -112,8 +115,8 @@
       float: left;
       width: 50%;
       // margin-right: 2%;
-      margin-left: 3%;
-      margin-bottom: 3%;
+      // margin-left: 3%;
+      margin-bottom: 2%;
     
       .user_title_signUp {
         // font-family: 'Amatic SC', cursive;
@@ -240,7 +243,7 @@
 
     .container2_siginIn {
       float: left;
-      width: 40%;
+      width: 30%;
       // margin-left: 10px;
       // margin-right: 3%;
       margin-top: 95px;
@@ -258,15 +261,20 @@
       .socialLogin{
         // margin:0 10%;
         // margin-right: 20px;
-        padding-left: 17%;
+        padding-left: 13%;
         // position: relative;
         // display: flex;
         // justify-content: center;
         // align-items: center;
         // flex-direction: row;
+
+        .social_login_title {
+          margin-bottom: 1000px;
+        }
         .socialLogin_btn{
           
           margin-top: 1rem;
+          margin-bottom: 20px;
           display: flex;
           justify-content: flex-start;
           // max-width: 50%;
