:bug: 버튼 글자 위로 가는 문제 수정
버튼 글자 위로 가는 문제 수정

--- a/src/css/Comments.scss
+++ b/src/css/Comments.scss
@@ -162,6 +162,10 @@
   right: 5%;
 }
 
+.test {
+  text-decoration: none;
+}
+
 .HowToGo {
   width: 90px;
   height: 30px;
@@ -171,6 +175,7 @@
   color: black;
   background-color: rgb(97, 69, 163);
   border-radius: 10px;
+  text-decoration: none;
 }
 
 .favorite_div {
