--- a/src/css/Button.scss
+++ b/src/css/Button.scss
@@ -58,6 +58,7 @@ $lightGray: rgb(190, 188, 188);
     padding-right: 1rem;
     font-size: 0.875rem;
   }
+
   // 해시태그 수정완료 버튼
   &.completeModify_hashtag {
     height: 1.5rem;
@@ -65,7 +66,9 @@ $lightGray: rgb(190, 188, 188);
     padding-right: 1rem;
     font-size: 0.875rem;
     vertical-align: middle;
+    align-items: center;
   }
+
   // 사진 삭제 버튼
   &.deletePhoto {
     position: relative;
@@ -78,6 +81,7 @@ $lightGray: rgb(190, 188, 188);
     padding-left: 1rem;
     padding-right: 1rem;
     font-size: 1.25rem;
+    align-items: center;
   }
   // 해시태그 수정 버튼
   &.modify_hashtag {
@@ -88,6 +92,7 @@ $lightGray: rgb(190, 188, 188);
     vertical-align: middle;
     position: absolute;
     right: 8%;
+    align-items: center;
   }
   // 사진 삭제 버튼
   &.photo_delete {
@@ -98,6 +103,7 @@ $lightGray: rgb(190, 188, 188);
     vertical-align: middle;
     position: absolute;
     right: 0;
+    align-items: center;
   }
   // 댓글 삭제 버튼
   &.comment_delete {
@@ -106,6 +112,7 @@ $lightGray: rgb(190, 188, 188);
     padding-right: 1rem;
     font-size: 0.875rem;
     vertical-align: middle;
+    align-items: center;
   }
   // 댓글 등록 버튼
   &.small_Comment {
@@ -117,6 +124,7 @@ $lightGray: rgb(190, 188, 188);
     padding-left: 1.2rem;
     // padding-right: 1rem;
     font-size: 0.9rem;
+    align-items: center;
   }
   // 커스터마이징 사이즈
   &.small_mypage_profile {
@@ -150,7 +158,7 @@ $lightGray: rgb(190, 188, 188);
   }
 
   &.lightGray {
-    @include button-color($lightGray)
+    @include button-color($lightGray);
   }
 
   // & + & 는 .Button + .Button을 의미.
@@ -188,7 +196,7 @@ $lightGray: rgb(190, 188, 188);
     display: flex;
     justify-content: center;
     width: 12%;
-    
+
     height: 1.3rem;
     align-items: center;
     font-size: 0.5rem;
@@ -238,11 +246,10 @@ $lightGray: rgb(190, 188, 188);
     padding: 12px;
     justify-content: center;
     width: 65px;
-    
+
     font-size: 0.9rem;
     height: 1.5rem;
     align-items: center;
-    
   }
   &.nanoWidth_removeuser_inmapage {
     display: flex;
@@ -259,68 +266,4 @@ $lightGray: rgb(190, 188, 188);
     width: 150px;
     align-items: center;
   }
-
-
-  // 해시태그 수정완료 버튼
-  &.completeModify_hashtag {
-    height: 1.5rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    font-size: 0.875rem;
-    vertical-align: middle;
-  }
-  // 사진 삭제 버튼
-  &.deletePhoto {
-    position: relative;
-    display: block;
-    top: 15%;
-    margin-left: auto;
-    margin-right: auto;
-    width: 14rem;
-    height: 3rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    font-size: 1.25rem;
-  }
-  // 해시태그 수정 버튼
-  &.modify_hashtag {
-    height: 1.5rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    font-size: 0.875rem;
-    vertical-align: middle;
-    position: absolute;
-    right: 8%;
-  }
-  // 사진 삭제 버튼
-  &.photo_delete {
-    height: 1.5rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    font-size: 0.875rem;
-    vertical-align: middle;
-    position: absolute;
-    right: 0;
-  }
-  // 댓글 삭제 버튼
-  &.comment_delete {
-    height: 1.5rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    font-size: 0.875rem;
-    vertical-align: middle;
-  }
-  // 댓글 등록 버튼
-  &.small_Comment {
-    position: absolute;
-    right: 0;
-    width: 17%;
-    height: 1.6rem;
-    text-align: center;
-    padding-left: 1.2rem;
-    // padding-right: 1rem;
-    font-size: 0.9rem;
-  }
-
-
 }
