--- a/src/css/AddPhoto.scss
+++ b/src/css/AddPhoto.scss
@@ -3,7 +3,7 @@
   float: right;
   font-size: 20px;
   font-weight: lighter;
-  padding-right: 1rem;
+  margin-right: 2.5rem;
 }
 
 .close:hover,
@@ -84,15 +84,62 @@
   margin-right: 0.5rem;
   transition: width 0.4s ease-in-out;
   // searchicon 스타일
-  background-color: white;
-  background-image: url("../searchicon.png");
-  background-position: 2px 2px;
-  background-size: 1.2rem;
-  background-repeat: no-repeat;
+  // background-color: white;
+  // background-image: url("../searchicon.png");
+  // background-position: 2px 2px;
+  // background-size: 1.2rem;
+  // background-repeat: no-repeat;
   // placeholder 위치
-  padding: 5px 7px 5px 25px;
+  // padding: 5px 7px 5px 25px;
+  padding: 5px;
   // 자동 늘이기
   &:focus {
     width: 10rem;
+  }
+}
+
+.addphoto-label {
+  font-size: 11pt;
+  margin-right: 1rem;
+}
+
+@media (max-height: 600px), screen and (orientation: portrait) {
+  .close {
+    color: black;
+    font-size: 10pt;
+    margin-right: 50px;
+  }
+  .addphoto-button,
+  .addphoto-notyet {
+    width: 80px;
+    height: 30px;
+  }
+  .addphoto-title {
+    font-size: 12pt;
+  }
+  .dropzone {
+    height: 10px;
+    width: 15px;
+  }
+  .add-kakaomap {
+    height: 148px;
+    width: 250px;
+  }
+  .addphoto-label {
+    font-size: 9pt;
+    margin-right: 0.5rem;
+  }
+  .input-search {
+    width: 40px;
+    font-size: small;
+    &:focus {
+      width: 90px;
+    }
+  }
+  .input-title-field,
+  .input-hashtag-field {
+    border-radius: 2px;
+    background-color: white;
+    width: 70px;
   }
 }
