--- a/src/css/Main.scss
+++ b/src/css/Main.scss
@@ -1,29 +1,6 @@
 .scrolledsection {
   overflow: visible;
 
-  .AddPhoto {
-    position: absolute;
-    right: 100px;
-    top: 30px;
-    z-index: 1;
-    cursor: pointer;
-    svg {
-      font-size: 6rem;
-      // color: skyblue;
-      color: #e9efff;
-    }
-  }
-
-  .AddPhoto-icon {
-    &:hover {
-      color: #9bb8ff;
-    }
-  }
-
-  .AddPhoto-button {
-    border: none;
-  }
-
   .scoll_to_top {
     background: rgba(128, 128, 128, 0.63);
     border-radius: 100px;
@@ -47,7 +24,7 @@
 #nav {
   .nav_div {
     // background: rgba(4, 4, 4, 0.5);
-    background: linear-gradient(to bottom, black,50%, rgba(0, 0, 0, 0));
+    background: linear-gradient(to bottom, black, 50%, rgba(0, 0, 0, 0));
 
     padding: 0px 20px;
     position: absolute;
@@ -119,7 +96,7 @@
     .nav_link {
       // background-color: white;
       // background: #e6e9e0;
-      font-family: 'Noto Serif KR', serif;
+      font-family: "Noto Serif KR", serif;
       background: rgba(255, 255, 255, 0.808);
       color: black;
       display: flex;
@@ -138,11 +115,34 @@
       .list {
         display: flex;
         padding: 5% 28%;
-        
+
         font-size: 0.9rem;
         cursor: pointer;
       }
     }
+  }
+
+  .AddPhoto {
+    position: absolute;
+    right: 100px;
+    // top: 2rem;
+    z-index: 1;
+    cursor: pointer;
+    svg {
+      font-size: 6rem;
+      // color: skyblue;
+      color: #e9efff;
+    }
+  }
+
+  .AddPhoto-icon {
+    &:hover {
+      color: #9bb8ff;
+    }
+  }
+
+  .AddPhoto-button {
+    border: none;
   }
 
   // HamburgerMenuTemp
@@ -163,7 +163,7 @@
     }
 
     .nav_link {
-      font-family: 'Noto Serif KR', serif;
+      font-family: "Noto Serif KR", serif;
       // background: rgba(135, 206, 235, 1);
       background: rgba(255, 255, 255, 0.808);
       color: black;
@@ -184,7 +184,7 @@
       .list {
         display: flex;
         padding: 6% 28%;
-        
+
         font-size: 0.8rem;
         cursor: pointer;
       }
